--- a/Home.html
+++ b/Home.html
@@ -19,11 +19,11 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="/">SE<span>M<sup>2</sup>.</span></a></div>
+            <div class="logo"><a href="Home.html">SE<span>M<sup>2</sup>.</span></a></div>
             <ul class="menu">
-                <li><a href="/" class="menu-btn">Home</a></li>
-                <li><a href="/#about" class="menu-btn">About</a></li>
-                <li><a href="/#projects" class="menu-btn">Support</a></li>
+                <li><a href="Home.html" class="menu-btn">Home</a></li>
+                <li><a href="About.html" class="menu-btn">About</a></li>
+                <li><a href="Support.html" class="menu-btn">Support</a></li>
                 <li><a href="/#skills" class="menu-btn">Skills</a></li>
                 <li><a href="/#teams" class="menu-btn">Teams</a></li>
                 <!-- <li><a href="#contact" class="menu-btn">Contact</a></li> -->
@@ -59,144 +59,13 @@
                     <p>We are the BCA(Datascience) student’s From Vels Institute of Science, Technology & Advanced Studies is an institute of higher education located in Pallavaram, Chennai, Tamil Nadu, India.</p>
                     <br>
                     <p>We’ve Done a projects based on machine Learning model prediction, using flask to access api’s and deployed in Heroku server.</p>
-                    <a href="/about">Details</a>
+                    <a href="About.html">Details</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- services section start -->
-    <section class="services" id="projects">
-        <div class="max-width">
-            <h2 class="title">Projects</h2>
-                <div class="serv-content">
-                    <div class="card">
-                        <div class="box">
-                            <!--<i class="fas fa-mail-bulk"></i> -->
-                            <i class="fas fa-comments"></i>
-                            <div class="text">SMS Spam & Ham Prediction</div>
-                            <a href="/projectsms" class="link"></a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="box">
-                            <i class="fas fa-credit-card"></i>
-                            <div class="text">Credit Card Transaction Prediction</div>
-                            <a href="/projectcct" class="link"></a>
-                        </div>
-                    </div>
-                     <div class="card">
-                        <div class="box">
-                            <i class="fas fa-chart-line"></i>
-                            <div class="text">Gold Prediction</div>
-                            <a href="/projectgld" class="link"></a>
-                        </div>
-                    </div> 
-                    <div class="card">
-                        <div class="box">
-                            <i class="fas fa-heartbeat"></i>
-                            <div class="text">Calories Prediction</div>
-                            <a href="/projectcal" class="link"></a>
-                        </div>
-                    </div>
-                </div>
-            
-        </div>
-    </section>
-
-    <!-- skills section start -->
-    <section class="skills" id="skills">
-        <div class="max-width">
-            <h2 class="title">Our skills</h2>
-            <div class="skills-content">
-                <div class="column left">
-                    <div class="text">Our creative skills & experiences.</div>
-                    <p>- Arguably the most important skill of a data scientist. Besides having the knowledge to work with data, data scientists need to have the tools and skills to convert their theoretical knowledge into practical implementation. This is commonly done using some form of programming and hence, programming became one of the highly-sought-after skills in a data scientist.<br><br>
-                        - We have knowledge in Machine learning to build predictive models. For example, you want to predict the number of customers you will have in the next month by looking at the past month’s data, you will need to use machine learning algorithms.
-                    </p>
-                    <a href="/about">About Us</a>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>python</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line python"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Machine Learning</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line machinelearning"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Programming knowledge</span>
-                            <span>75%</span>
-                        </div>
-                        <div class="line Programmingknowledge"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- teams section start -->
-    <section class="teams" id="teams">
-        <div class="max-width">
-            <h2 class="title">My teams</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="../static/images/ebrahim-image.jpg" alt="">
-                        <div class="text">Ebrahim</div>
-                        <p>Contact: ebrahims1902@gmail.com</p>
-                    </div>
-                    <a href="/about-ebrahim" class="link"></a>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="../static/images/shahul-image.jpg" alt="">
-                        <div class="text">Shahul Hameed</div>
-                        <p>Contact: shahul16h@gmail.com</p>
-                    </div>
-                    <a href="/about-shahul" class="link"></a>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="../static/images/nijam-image.jpeg" alt="">
-                        <div class="text">Mohamed Nijam</div>
-                        <p>Contact: mohamednijam39@gmail.com</p>
-                    </div>
-                    <a href="/about-nijam" class="link"></a>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="../static/images/mukesh-image.jpeg" alt="">
-                        <div class="text">Mukesh</div>
-                        <p>Contact: mukkimukesh58@gmail.com</p>
-                    </div>
-                    <a href="/about-mukesh" class="link"></a>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
     
     <footer>
