--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Projects Website</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -22,8 +22,8 @@
         <div class="max-width">
             <div class="logo"><a href="/">SE<span>M<sup>2</sup>.</span></a></div>
             <ul class="menu">
-                <li><a href="/#" class="menu-btn">Home</a></li>
-                <li><a href="/#about" class="menu-btn">About</a></li>
+                <li><a href="Home.html" class="menu-btn">Home</a></li>
+                <li><a href="About.html" class="menu-btn">About</a></li>
                 <li><a href="/#projects" class="menu-btn">Projects</a></li>
                 <li><a href="/#skills" class="menu-btn">Skills</a></li>
                 <li><a href="/#teams" class="menu-btn">Teams</a></li>
